Added Real Time Scheduler

--- a/src/nautilus/Makefile
+++ b/src/nautilus/Makefile
@@ -32,5 +32,7 @@ obj-y += \
 	mm/
 	
 
+
 obj-$(NAUT_CONFIG_PROFILE) += instrument.o
 obj-$(NAUT_CONFIG_XEON_PHI) += sfi.o
+obj-$(NAUT_CONFIG_USE_RT_SCHEDULER) += rt_scheduler.o
